# sqlxport

./: .coveragerc  .env.example  .gitignore  INTEGRATION_TESTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  users.parquet
.github/workflows/: ci.yml  extended.yml
demo/: README.md  docker-compose.yml  preview.ipynb  run_sql2data.sh  sales.parquet  seed.sql
demo/.ipynb_checkpoints/: preview-checkpoint.ipynb
demo/athena_glue_aws/: README.md  docker-compose.yml  preview.ipynb  run_sqlxport.sh
demo/athena_glue_local/: README.md  docker-compose.yml  glue_register.sh  run_sqlxport.sh
demo/local_minio_postgres/: README.md  docker-compose.yml  preview.ipynb  preview_query.duckdb  run_basic_parquet.sh  run_csv.sh  run_partitioned_parquet.sh  run_sql2data.sh  run_sqlxport.sh  sales.csv
demo/pipeline/: README.md  docker-compose.yml  run_full_pipeline.sh  run_pipeline.sh  run_sqlxport.sh
demo/redshift_to_athena/: README.md  preview.ipynb  run_sqlxport.sh
demo/spark_delta/: .gitignore  Dockerfile.spark  README.md  docker-compose.yml  preview.ipynb  run_spark_in_docker.sh  run_spark_query.py  run_sql2data.sh  run_sqlxport.sh
demo/spark_minio_delta/: Dockerfile.spark  README.md  docker-compose.yml  run_spark_query.py  run_sql2data.sh  run_sqlxport.sh
demo/spark_minio_postgres/: Dockerfile.spark  README.md  docker-compose.yml  run_spark_in_docker.sh  run_spark_query.py  run_sql2data.sh  run_sql2data_bulk.sh  run_sqlxport.sh  run_sqlxport_bulk.sh  spark-defaults.conf  verify_outputs.sh
docs/: test_plan.md  todo.md
examples/: README.md
examples/export_postgres_parquet/: README.md  run_manual.py  run_sql2data.sh  run_sqlxport.sh
examples/export_redshift_unload/: README.md  run_manual.py  run_sql2data.sh  run_sqlxport.sh
examples/preview_s3_file/: run_manual.py  run_sql2data.sh  run_sqlxport.sh
scripts/: gen_semantic_training_data.py  train_semantic_model.py
sql2data/: redshift_unload.py
sql2data/cli/: main.py
sql2data/core/: extract.py  storage.py
sql2data/ddl/: utils.py
sql2data/formats/: base.py  csv_writer.py  parquet_writer.py  registry.py
sql2parquet/: redshift_unload.py
sql2parquet/cli/: main.py
sql2parquet/core/: extract.py  storage.py
sql2parquet/ddl/: utils.py
sql2parquet/formats/: base.py  csv_writer.py  parquet_writer.py  registry.py
sqlxport/: __main__.py  enums.py  redshift_unload.py
tests/: conftest.py
(+87 files in other folders)
